# QT_Industrial_ConBeta

./: .gitignore  README.md
ControlSystemUI/: CMakeLists.txt  README.md
ControlSystemUI/include/: AnimatedButton.h  ConnectionStatusWidget.h  DebugHelper.h  JogControlPage.h  LogWidget.h  LoginDialog.h  MainWindow.h  ModbusConfigDialog.h  ModbusManager.h  MoverData.h  Moverwidget.h  StyleManager.h  StyleUtils.h  Trackwidget.h  overviewpage.h  recipemanagerpage.h
ControlSystemUI/src/: AnimatedButton.cpp  ConnectionStatusWidget.cpp  DebugHelper.cpp  JogControlPage.cpp  LogWidget.cpp  Main.cpp  MainWindow.cpp  ModbusConfigDialog.cpp  ModbusManager.cpp  StyleManager.cpp  StyleUtils.cpp  Trackwidget.cpp  logindialog.cpp  moverwidget.cpp  overviewpage.cpp  recipemanagerpage.cpp
MaglevControl/: MaglevControl.pro
MaglevControl/README/: PLC对接技术说明.md  PROJECT_GUIDE.md  README.md  conda_setup_guide.md  代码说明文档.md  配方管理系统重构说明文档.md
MaglevControl/Resource/: Icon.qrc  blue_style.css  classic_blue_theme.css  dark_industrial_theme.css  dark_style.css  light_modern_theme.css  lightblue_style.css  style.qss  temp.css
MaglevControl/include/: MoverData.h  TrackWidget.h  basecontroller.h  controlpanel.h  globalparametersetting.h  logmanager.h  logwindow.h  mainwindow.h  modbusmanager.h  recipemanager.h  recipewidget.h  singlemovercontrol.h  stylemanager.h  thememanager.h
MaglevControl/src/: TrackWidget.cpp  basecontroller.cpp  controlpanel.cpp  globalparametersetting.cpp  logmanager.cpp  logwindow.cpp  main.cpp  mainwindow.cpp  modbusmanager.cpp  recipemanager.cpp  recipewidget.cpp  singlemovercontrol.cpp  stylemanager.cpp  thememanager.cpp
